# praxis

./: .gitignore  praxis.sln  praxis.vcxproj  praxis.vcxproj.filters  robotour.c
ai/: grammar.rkt  grammar2.rkt  grammar3.rkt  grammar4.rkt  list.rkt
alg/: .robotour.c.swp  Makefile  UnionFind.java  addTwoListNums.js  arithmetic_tree.py  ascii.py  bfs.py  bisearch.c  bulbs.js  chuck.py  codility.js  compression.js  demos  dijkstra.py  download.py  farmer.js  farmer.py  fib_memo.js  fizzbuzz.c  flatmap.js  hangman.js  insertion_sort.c  issort.c  main.c  mars_lander2.py  mergeTwoSortedLists.js  merge_lists.js  mime.py  occurs.js  problems.js  qsort.c  read.c  rectangle_partition.py  robotour.c  rpn2.js  search.h  shadows.py  sort.h  sort.h.gch  tests.js  (+6 more)
c/: c.md  c.org  cdecl.c  core.c  decl  decl_and_init.c  env.c  gsltest.c  homedir.c  style  style.c  tests.c  time.c  tree.c
c/wee/: .gitignore  CMakeLists.txt  README.md  SConstruct
c/wee/src/: distance.c  distance.h  distance.s  foo.lst  history.c  history.h  history.s  minunit.h  util.h  wee.c  wee.h  wee.s
clj/: add.clj  core.clj  introduction.clj  loop.clj  same.py
hs/: exam-decembre.hs  last.hs  list-ex-1.hs  picnic.hs  square.hs
java/: Accumul.java  AccumulTest.java  SquareDigit.java
js/: lisa.js  simplePromise.js  snippets.js  this.js  websocketMiddleware.ts
kbd/: CapsCtrl.map  ctrl  kbd
lang/: words  words.test
lessons/: app.js  index.html  lisa.js  style.css
php/: enc1.php
py/: anagrama.py  backup.py  fib.py  queens.py
scm/: Wedding.rkt  copyright.rkt  learn.rkt  length-test.rkt  list.rkt  (+2 more)
(+640 files in other folders)
